documenting some methods, change connection form to get correct data

--- a/src/main/resources/words.properties
+++ b/src/main/resources/words.properties
@@ -1,12 +1,15 @@
 add=Add
-change.database=Change to this Database
+change.database=Change to this database
+change.connection.file=Change to this connection file
 database=Database
 delete=Delete
 save=Save
 connection.changed=Connection files changed!
-can.not.delete=Can't delete last database!
+can.not.delete.database=Can't delete last database!
+can.not.delete.connection.file=Can't delete last connection file!
 name.used=Name already used!
 error.database=Error getting selected database!
+error.connection.file=Error getting selected connection file!
 name.required=Name is required!
 user.required=User is required!
 url.required=URL is required!
