--- a/src/main/resources/words.properties
+++ b/src/main/resources/words.properties
@@ -17,3 +17,7 @@ name=Name
 user=User
 url=URL
 connection.file=Connection File
+path=Path
+user.tag=User Tag
+url.tag=Url Tag
+password.tag=Password Tag
