add required fields in connection file form

--- a/src/main/resources/words.properties
+++ b/src/main/resources/words.properties
@@ -1,6 +1,5 @@
 add=Add
 change.database=Change to this database
-change.connection.file=Change to this connection file
 database=Database
 delete=Delete
 save=Save
@@ -13,6 +12,10 @@ error.connection.file=Error getting selected connection file!
 name.required=Name is required!
 user.required=User is required!
 url.required=URL is required!
+path.required=Path is required!
+user.tag.required=User Tag is required!
+url.tag.required=Url Tag is required!
+password.tag.required=Password Tag is required!
 name=Name
 user=User
 url=URL
