--- a/src/main/resources/words.properties
+++ b/src/main/resources/words.properties
@@ -24,3 +24,6 @@ path=Path
 user.tag=User Tag
 url.tag=Url Tag
 password.tag=Password Tag
+password=Password
+save.password=Save Password
+password.saved=Password saved!
