--- a/src/main/resources/words.properties
+++ b/src/main/resources/words.properties
@@ -16,6 +16,8 @@ path.required=Path is required!
 user.tag.required=User Tag is required!
 url.tag.required=Url Tag is required!
 password.tag.required=Password Tag is required!
+password.required=Password is required!
+code.required=ID is required!
 name=Name
 user=User
 url=URL
@@ -26,3 +28,11 @@ url.tag=Url Tag
 password.tag=Password Tag
 password=Password
 save.password=Save Password
+login=Login
+id=ID
+description=Description
+soc=SOC
+local=Local
+hsoc=H-SOC
+psoc=P-SOC
+bsoc=B-SOC
